--- a/public/stylesheets/less/discovery.less
+++ b/public/stylesheets/less/discovery.less
@@ -16,3 +16,51 @@
 		.navitem	{padding: 10px; background-color: #ddd; border: 3px solid #eee;}
 		.navitem.active 	{background-color: #777; color: #fff; border: 3px solid #777;}
 	}
+
+
+// Repo Index View
+// Listing all repos 
+.repo {
+	.h6; margin: 10px;
+	
+	.ident {
+		.h5; 
+		.bold;
+		.owner {}
+		.name {}
+	}
+	.description {.p;}	
+	.community_text {}
+	.watchers {}
+	.forks {}
+	
+	
+	
+}
+
+// Activity Wheel
+
+.activity_wheel {width: 12px; height: 12px; .border-radius; float: left; margin-right: 5px; margin-top: 3px;}
+	.lt7 	 { background: #090; }
+	.lt14  { background: #090; }
+	.lt31  { background: #090; }
+	.lt62  { background: #0c0; }
+	.lt93  { background: #ff0; }
+	.lt183 { background: #fb0; }
+	.lt365 { background: #c00; }
+	.gt365 { background: #c00; }
+	.error {}
+	
+
+
+// Add repo
+// Displayed in a boxy kind of thing
+
+#add_repo {
+	background: #fff;
+	margin: 10px;
+	padding: 10px;
+	.bordered;
+	.drop-shadow;
+}
+	
