--- a/public/stylesheets/less/foundation.less
+++ b/public/stylesheets/less/foundation.less
@@ -140,9 +140,9 @@
 
 	.subheader { color: #777; font-weight: 300; margin-bottom: 24px; }
 	
-	.p1 			{ font-size: 18px; font-size: 1.8rem; line-height: 1.5;  }	
-	.p, .p2, p 	{ font-size: 16px; font-size: 1.6rem; line-height: 1.25; }
-	.p3 			{ font-size: 13px; font-size: 1.3rem; line-height: 1.25; }	
+	.p1 			{ font-size: 18px; font-size: 1.8rem; line-height: 1.50; margin-bottom: 3px; }	
+	.p, .p2, p 	{ font-size: 16px; font-size: 1.6rem; line-height: 1.25; margin-bottom: 3px; }
+	.p3 			{ font-size: 13px; font-size: 1.3rem; line-height: 1.25; margin-bottom: 3px; }	
 
 	.p img, .p1 img, .p2 img, .p3 img, p img 	{ margin: 0; }
 
