--- a/app/views/repos/show.html.haml
+++ b/app/views/repos/show.html.haml
@@ -1,36 +1,35 @@
-%p#notice= notice
+- repo = @repo
 
-%p
-  %b Ident:
-  = @repo.ident
-%p
-  %b Name:
-  = @repo.name
-%p
-  %b Owner:
-  = @repo.owner
-%p
-  %b Description:
-  = @repo.description
-%p
-  %b Watchers:
-  = @repo.watchers
-%p
-  %b Forks:
-  = @repo.forks
-%p
-  %b Html url:
-  = @repo.html_url
-%p
-  %b Homepage:
-  = @repo.homepage
-%p
-  %b Last updated:
-  = @repo.last_updated
-%p
-  %b Community text:
-  = @repo.community_text
+.repo
+	%a(href="#{ repo.html_url }")
+		.ident
+			%span.owner= 			repo.owner
+			\ / 
+			%span.name= 			repo.name
+	.description= 		repo.description
+	
+	-# Community Text
+	- if params[:edit]
+		%form(action="/do/comtext" method="post")
+			%input(type="hidden" name="repo[id]" value="#{ repo.id }")
+			%textarea(cols="10" rows="6" name="repo[community_text]") #{repo.community_text}
+			%input(type="submit" value="Submit changes")
+	- else
+		.community_text= 	repo.community_text
+		
+	.stats
+		%span.acitivity
+			.activity_wheel(class="#{activity_wheel(repo.last_updated)}")
+		|
+		%span.watchers 			W: #{ repo.watchers }
+		|
+		%span.forks 				F: #{ repo.forks }
+	%a.html_url(href="#{ repo.html_url }") Github
+	|
+	%a.homepage(href="#{ repo.homepage }")	Homepage
+		
+%a(href="?edit=true") Edit community text
 
-= link_to 'Edit', edit_repo_path(@repo)
-\|
+%br		
+
 = link_to 'Back', repos_path
