--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,8 +24,9 @@
 				
 				
 					#logo
-						.name 	discovery!
-						.slogan 	The finest repos on github easily accessible.
+						.name 	
+							%a(href="/") discovery!
+						.slogan 	The finest repos on <a href="https://github.com/">github</a> easily accessible.
 					
 					#navigation
 					
@@ -44,7 +45,9 @@
 		= notice
 						
 		
-
-	= yield
+	.container
+		.row
+			.twelve.columns
+				= yield
 
 	%script document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
