--- a/public/stylesheets/less/discovery.less
+++ b/public/stylesheets/less/discovery.less
@@ -22,6 +22,9 @@
 // Listing all repos 
 .repo {
 	.h6; margin: 10px;
+	.bordered;
+	.drop-shadow;
+	padding: 10px;
 	
 	.ident {
 		.h5; 
@@ -62,5 +65,12 @@
 	padding: 10px;
 	.bordered;
 	.drop-shadow;
+}
+
+
+// Label Index View
+
+.label {
+	.bordered; .drop-shadow; padding: 10px; margin: 10px;
 }
 	
