Rpeo index view cleanup and extension

--- a/app/views/repos/index.html.haml
+++ b/app/views/repos/index.html.haml
@@ -1,22 +1,20 @@
-.h4 Repos
+.h3 Repos
 
 - @repos.each do |repo|
-	.repo
-		- if repo.ident.include? "."
-			%a.show(href="/repos/#{ repo.id }")
-				.ident
-					%span.owner= 			repo.owner
-					\ / 
-					%span.name= 			repo.name
-		- else
-			%a.show(href="/repos/#{ repo.ident }")
-				.ident
-					%span.owner= 			repo.owner
-					\ / 
-					%span.name= 			repo.name
+	.repo(class="#{ cycle("odd", "even") }")
+	
+		%a.show(href="/repos/#{ doturl(repo.ident) }")
+			.ident
+				%span.owner= 			repo.owner
+				\ / 
+				%span.name= 			repo.name
+		
 		.description= 		repo.description
-		-if repo.community_text
-			.community_text= 	truncate(repo.community_text, length: 140)
+		
+		.community_text= 	truncate(repo.community_text, length: 140)
+		
+		.labels 	Labels: #{ sort_by_popularity(repo.label_list) }
+		
 		.stats
 			%span.acitivity
 				.activity_wheel(class="#{activity_wheel(repo.last_updated)}")
@@ -24,15 +22,11 @@
 			%span.watchers 			W: #{ repo.watchers }
 			|
 			%span.forks 				F: #{ repo.forks }
-		%a.html_url(href="#{ repo.html_url }") Github
-		|
-		%a.homepage(href="#{ repo.homepage }")	Homepage
-		|
-		-# Nicer URL than just ID for repos that have no "." in identifier (those with "." would otherwise not be routed correctly)
-		- if repo.ident.include? "."
-			%a.show(href="/repos/#{ repo.id }") Show
-		- else
-			%a.show(href="/repos/#{ repo.ident }") Show
-
+		
+		.links
+			%a.html_url(href="#{ repo.html_url }") Github
+			|
+			%a.homepage(href="#{ repo.homepage }")	Homepage
+			
 
 = render(partial: "shared/add_repo")
